[package]
name = "hydra-client-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
hydra-client = { path = "../hydra-client" }
hydra-protocol = { path = "../hydra-protocol" }