[package]
name = "hydra-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hydra-client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
ring = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
rcgen = "0.10"
url = "2.5"
base64 = "0.22"
crossbeam-queue = "0.3"
rand = "0.8"
hydra-protocol = { path = "../hydra-protocol" }

[dev-dependencies]
hydra-node = { path = "../hydra-node" }